--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/GDGDuqueDeCaxias/gdgduquedecaxias.github.io#readme",
   "devDependencies": {
     "angular": "^1.6.2",
+    "babel": "^6.5.2",
     "gulp": "^3.9.1",
     "webpack": "^2.2.1"
   }
