--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "angular": "^1.6.2",
     "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
     "webpack": "^2.2.1"
   }
 }
