--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "webpack": "^2.2.1"
+  },
+  "dependencies": {
+    "normalize.css": "^5.0.0"
   }
 }
