--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "homepage": "https://github.com/GDGDuqueDeCaxias/gdgduquedecaxias.github.io#readme",
   "devDependencies": {
     "angular": "^1.6.2",
+    "autoprefixer": "^6.7.3",
     "babel": "^6.5.2",
     "gulp": "^3.9.1",
     "gulp-imagemin": "^3.1.1",
+    "gulp-postcss": "^6.3.0",
     "gulp-sass": "^3.1.0",
     "webpack": "^2.2.1"
   },
